--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -2,13 +2,13 @@
 
 .navbar {
     background-color: #333;
-    padding: 20px;
-    max-width: 100%;
-    max-height: 20%;
+
+    height: 8%;
+    padding: 10px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content:space-between;
+    justify-content:space-around;
+    
     
  
 }
@@ -16,19 +16,19 @@
 .logo img{
    width: 10%;
    image-rendering: optimizeQuality;
-   background-color: aliceblue;
-   border-radius: 10px;
+   margin-left: 40px;
 }
 
 .nav-links a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    margin-left: 40px;
-    background-color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    text-decoration: none;    
     border-radius: 10px;
-    padding: 15px;
+    padding: 10px;
+    border-left: 1px solid rgb(255, 255, 255);
+    margin-right: 40px;
+   
 }
 
 .nav-links a:hover {
-    border-bottom: 2px solid white;
+    background-color:  rgb(69, 69, 69);
 }
