--- a/src/components/NoteForm/FormNote.css
+++ b/src/components/NoteForm/FormNote.css
@@ -1,7 +1,5 @@
 .aside-notes {
-    background-color: cyan;
-    width: 400px;
-    height: 100vh;
+    background-color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +8,7 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    margin-top: -300px;
+    margin-bottom: 60%;
   }
   .margin-form {
     margin-bottom: 5px;
