--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -1,5 +1,36 @@
-.main{
-    background-color: rgba(203, 87, 200, 0.382);
-    width: 100%;
-    border-radius: 20px;
-}
+/* Note.css */
+
+.mainT {
+    background-color: #f0f0f0;
+    padding: 20px;
+    margin: 10px;
+    margin-left: 200px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    width: 90%;
+  }
+  
+  .mainT h1 {
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  
+  .mainT span {
+  
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  
+  .mainT div {
+    font-size: 12px;
+    color: #666;
+  }
+  
+  
+  .Buttons{
+    display:flex ;
+    justify-content: end;
+    gap: 10px;
+  }
+
+ 
